[package]
name = "adaptor"
version = "0.1.0"
authors = ["Gene Ferneau <gene@ferneau.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fischlin = { git = "https://github.com/geneferneau/fischlin", branch = "main" }
#fischlin = { path = "../fischlin" }
#secp256k1 = { version = "0.20.1", default-features = false, features = [ "bitcoin_hashes" ] }
secp256k1 = { git = "https://github.com/geneferneau/rust-secp256k1", branch = "adaptor", default-features = false, features = [ "bitcoin_hashes" ] }
#secp256k1 = { path = "../rust-secp256k1", default-features = false, features = [ "bitcoin_hashes" ] }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = [ "getrandom" ] }
#secp256k1-sys = { version = "0.4", default-features = false }
secp256k1-sys = { git = "https://github.com/geneferneau/rust-secp256k1", branch = "adaptor", path = "secp256k1-sys", default-features = false }
#secp256k1-sys = { path = "../rust-secp256k1/secp256k1-sys", default-features = false }
